# Ai-Shot

./: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: capture.rs  config.rs  error.rs  gemini.rs  image_processing.rs  lib.rs  ui.rs
crates/core/src/ui/: mod.rs  rendering.rs  selection.rs  settings.rs  snipping_tool.rs  state.rs
