[workspace]
members = [
    "crates/core",
    "crates/cli"
]
resolver = "2"

[workspace.dependencies]
# Error handling
anyhow = "1.0.100"
thiserror = "2.0.17"

# Async runtime
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "net", "time"] }

# Gemini API client
gemini-rust = "1.4.0"

# System / Screen capture
screenshots = "0.8"
clap = { version = "4.5.53", features = ["derive"] }
arboard = "3.6.1"

# Image processing
image = { version = "0.25.9", default-features = false, features = ["jpeg", "png"] }
base64 = "0.22.1"

# UI / Overlay
eframe = "0.33.3"

# Environment
dotenvy = "0.15.7"

url = "2.5.7"
egui_commonmark = "0.22.0"
futures = "0.3"

# Persistence
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "6.0.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
