[package]
name = "ai-shot-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
ai-shot-core = { path = "../core" }
anyhow.workspace = true
tokio.workspace = true
clap.workspace = true
rdev = "0.5"
image.workspace = true

[package.metadata.deb]
name = "ai-shot"
maintainer = "Ostap"
copyright = "2024, Ostap"
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/ai-shot-cli", "usr/bin/ai-shot", "755"]
]
extended-description = """
AI Screenshot Tool using Gemini API.
Supports background daemon mode (Ctrl+Alt+X).
"""
