[package]
name = "ai-shot-core"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror.workspace = true
gemini-rust.workspace = true
screenshots.workspace = true
base64.workspace = true
eframe.workspace = true
dotenvy.workspace = true
url.workspace = true
arboard.workspace = true
tokio.workspace = true
image.workspace = true
egui_commonmark.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
directories.workspace = true